<?xml version="1.0" encoding="utf-8"?>
    <com.google.android.material.card.MaterialCardView
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:cardCornerRadius="20dp"
        app:cardElevation="6dp"
        app:cardBackgroundColor="#8E7CC3">

        <LinearLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:gravity="center">

            <ImageView
                android:layout_width="80dp"
                android:layout_height="80dp"
                android:src="@android:drawable/ic_menu_camera"
                android:background="@drawable/circle_background"
                android:scaleType="centerInside"
                android:contentDescription="@string/veterinario"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/nombre_veterinario"
                android:textColor="@android:color/white"
                android:textStyle="bold"
                android:layout_marginTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/calificacion_veterinario"
                android:textColor="@android:color/white"
                android:layout_marginTop="4dp"/>

        </LinearLayout>
    </com.google.android.material.card.MaterialCardView>
